--- a/leighfisher_app/templates/about.html
+++ b/leighfisher_app/templates/about.html
@@ -22,28 +22,32 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
-      <h1 class="slogan-pg" ;style="text-align:center;" ><b> " YOU SAY IT, WE BUILT IT "</b></h1>
+      <h1 class="slogan-pg" ;style="text-align:center;" ><b> " YOU SAY IT, WE SOLVE IT "</b></h1>
 
         <div class="row content">
           <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+            <h2>We've got answers to all your Questions!</h2>
+            <h3>We care about your business and we are Knowledgeable about making your benefits higher.
+               We have been lucky to have the opportunity to service clients - from startups
+               to not-for-profit - to enterprise companies.</h3>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+            LeighFisher is a global management consulting firm that combines deep market-specific
+             knowledge with specialized expertise in business advisory, startups assistance,
+             international trading, logistics and trust funding. We focus on providing impactful
+             and noticeable consulting services.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>Business Advisory</li>
+              <li><i class="ri-check-double-line"></i>Startup's Assistance</li>
+              <li><i class="ri-check-double-line"></i>International Trading</li>
+              <li><i class="ri-check-double-line"></i>Logistics</li>
+              <li><i class="ri-check-double-line"></i>Trust Funding</li>
+              <li><i class="ri-check-double-line"></i>Infra Advisory</li>
+
             </ul>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+          
           </div>
         </div>
 
