--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -121,10 +121,24 @@
             <div class="footer-info">
               <h3>Leighfisher Consultancy Pvt. Ltd.</h3>
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                <b>Branch Office</b> <br>
+                Vital Sadan,
+                Gourdhan Goshala,<br>
+                Near Dhirubhai Ambani Hospital
+                Lodhivali,
+                <br>Raigad-410222
+                Maharashtra<br> <br>
+                <b>Head Office</b>
+                <br>
+                Puthenveetil building Thamallackal <br>
+                 p.o kumarapuram  village
+                 <br> Haripad.690548
+                Allappey
+                Kerala
+
+
+                <!-- <strong>Phone:</strong> +1 5589 55488 55<br>
+                <strong>Email:</strong> info@example.com<br> -->
               </p>
               <div class="social-links mt-3 ">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
