--- a/leighfisher_app/templates/contact.html
+++ b/leighfisher_app/templates/contact.html
@@ -33,19 +33,34 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>
+                  <b>Branch Office</b> <br>
+                  Vital Sadan,
+                  Gourdhan Goshala,<br>
+                  Near Dhirubhai Ambani Hospital
+                  Lodhivali,
+                  <br>Raigad-410222
+                  Maharashtra<br> <br>
+                  <b>Head Office</b>
+                  <br>
+                  Puthenveetil building Thamallackal <br>
+                   p.o kumarapuram  village
+                   <br> Haripad.690548
+                  Allappey
+                  Kerala
+                </p>
               </div>
 
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>lijothomas@leighfisher.in</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 9744492745</p>
               </div>
 
             </div>
